 Support for arageli.
 
 Version 0.4.1
 Fixed:
  fixed error in tests introduced in version 0.4.0 which resulted in exception-throwing assertions not being checked
 Changed:
  Constructors for AbstractLieGroup now accept strings as well as string literals
  Constructors for AbstractLieGroup<true> now accept an arbitrary number of parameters of type lst, ex, Name or NameIndex
 Added:
  Class PseudoRiemannianStructureByMatrix, allowing one to define a pseudo-riemannian metric by giving the matrix of the scalar product relative to a frame
  functions canonical_print, to_canonical_string and to_latex_canonical_string for canonical printing of ginac ex's (both in dflt and latex output). 
  LieGroup::canonical_print for canonical printing of Lie groups

 Version 0.4.2
 Changed:
  AbstractLieGroup constructors now accept strings as well as string literals 
  LieGroup::canonical_print returns reference to ostream
  ParseDifferentialForms now accepts letters a-z and A-Z for dimensions up to 61, and throws ParseError on out-of-bounds errors.
  Named constructor idiom is now used in PseudoRiemannianStructureByMatrix to prevent ambiguity  
  Updated to GiNaC 1.8.4  
Added:
  Function derivations
  PseudoRiemannianStructureByOrthogonalFrame for diagonal metrics
  Spinor support for PseudoRiemannianStructureByOrthogonalFrame and PseudoRiemannianStructureByOrthonormalFrame 
  
Version 0.4.3
Fixed:
 Manifold::Check_ddZero now uses NormalForm and NormalizeRoots, to avoid throwing when coefficients simplify to zero
 AbstractLieGroup accepts expressions using commas inside [].
Added:
  lie_group_to_string, function converting a lie group to a string in "Salamon notation"
  convenience function horizontal, which can be used to print out vectors as a horizontal comma-separated list rather than one entry per line
  function equations_such_that_linear_map_is_derivation to test whether a given element of gl is a derivation of a Lie algebra
  added copy operator to Has_dTable